# django-mongodb-learning

./: pyproject.toml
backend/: settings.py
blogs/: admin.py  models.py
blogs/migrations/: 0001_initial.py
